--- a/docker-images/docker-compose.yml
+++ b/docker-images/docker-compose.yml
@@ -18,6 +18,7 @@ services:
   server:
     image: ghcr.io/interopio/manager:latest
     environment:
+      - API_NAME=${API_NAME}
       - API_PORT=${API_PORT}
       - API_BASE=${API_BASE}
       - API_LICENSE_KEY=${API_LICENSE_KEY}
@@ -25,6 +26,8 @@ services:
       - API_STORE_MONGO=${API_STORE_MONGO}
       - API_TOKEN_SECRET=${API_TOKEN_SECRET}
       - API_AUTH_METHOD=${API_AUTH_METHOD}
+      - API_AUTH_EXCLUSIVE_USERS=${API_AUTH_EXCLUSIVE_USERS}
+      - API_INTERCEPT_PROCESS_SIGNALS=${API_INTERCEPT_PROCESS_SIGNALS}
     restart: unless-stopped
     ports:
       - '${API_PORT}:${API_PORT}'
