--- a/manager-template/2-advanced/services/server/Dockerfile.local
+++ b/manager-template/2-advanced/services/server/Dockerfile.local
@@ -3,9 +3,8 @@ FROM node:22-alpine as builder
 WORKDIR /home/node/app
 
 COPY ./services/server/package.json ./package.json
-COPY ./services/server/package-lock.json ./package-lock.json
 
-RUN npm ci --loglevel verbose
+RUN npm install --loglevel verbose
 
 COPY ./services/server/src ./src
 COPY ./services/server/tsconfig.json ./tsconfig.json
